kubernetes/workloads/apps/media-server/seerr/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media-server
  labels:
    app.kubernetes.io/name: seerr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 105055
        runAsGroup: 105055
        fsGroup: 105055
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.4.1@sha256:f4768de5f616248d723e05891f3345a1402123775d03bf0890dbfedc0831bda1
          imagePullPolicy: IfNotPresent
          ports:
            - name: seerr-http
              containerPort: &port 5055
              protocol: TCP
          volumeMounts:
            - name: seerr-config
              mountPath: /app/config
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              memory: 2Gi
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: *port
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          startupProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ['ALL']
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr
        - name: tmp
          emptyDir: {}
