kubernetes/workloads/apps/media-server/seerr/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - name: seerr-http
      port: 5055
      protocol: TCP
      targetPort: seerr-http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: media-server
  labels:
    app.kubernetes.io/name: seerr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: requests.${DOMAIN}
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: https
  hostnames:
    - requests.${DOMAIN}
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
